// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AmountInputDemo Component JSON 1`] = `
.c4 {
  line-height: 1.5;
  display: inline-block;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  outline: none;
  width: 20rem;
  height: 3.2rem;
  cursor: text;
  border-top-width: 0.1rem;
  border-top-style: solid;
  border-top-color: #cccccc;
  border-bottom-width: 0.1rem;
  border-bottom-style: solid;
  border-bottom-color: #cccccc;
  border-left-width: 0.1rem;
  border-left-style: solid;
  border-left-color: #cccccc;
  border-right-width: 0.1rem;
  border-right-style: solid;
  border-right-color: #cccccc;
  border-top-left-radius: 0.4rem;
  border-top-right-radius: 0.4rem;
  border-bottom-right-radius: 0.4rem;
  border-bottom-left-radius: 0.4rem;
}

.c4::-webkit-input-placeholder {
  color: #cccccc;
}

.c4::-moz-placeholder {
  color: #cccccc;
}

.c4:-ms-input-placeholder {
  color: #cccccc;
}

.c4::placeholder {
  color: #cccccc;
}

.c2 {
  position: relative;
  display: inline-block;
  outline: none;
}

.c3 {
  position: absolute;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  bottom: 50%;
  line-height: 1rem;
  font-size: 1.4em;
  color: rgba(0,0,0,0.65);
  left: 1rem;
}

.c1 {
  position: relative;
  display: inline-block;
}

.c0 {
  float: left;
  margin-left: 50px;
}

.c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  position: absolute;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  bottom: 50%;
  right: 1rem;
}

<div>
  <div
    className="c0"
  >
    <p>
      formatter AmountInput
    </p>
    <span
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        className="c2"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <span
          className="c3"
          style={Object {}}
        >
          <span
            className=""
            style={Object {}}
          >
            ¥
          </span>
        </span>
        <input
          autoFocus={false}
          className="c4"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          placeholder="请填写金额"
          prefix={
            <lugia_css_hoc_f
              themeProps={
                Object {
                  "onLugia": [Function],
                  "propsConfig": Object {},
                  "themeConfig": Object {},
                  "themeState": Object {
                    "disabled": false,
                  },
                }
              }
            >
              ¥
            </lugia_css_hoc_f>
          }
          readOnly={false}
          size="default"
          style={
            Object {
              "color": "#333333",
              "height": "3.2rem",
              "paddingBottom": "0rem",
              "paddingLeft": "3rem",
              "paddingRight": "3.5rem",
              "paddingTop": "0rem",
            }
          }
          value=""
        />
      </div>
    </span>
    <p>
      default AmountInput
    </p>
    <span
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        className="c2"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <span
          className="c3"
          style={Object {}}
        >
          <span
            className=""
            style={Object {}}
          >
            ¥
          </span>
        </span>
        <input
          autoFocus={false}
          className="c4"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          placeholder="请填写金额"
          prefix={
            <lugia_css_hoc_f
              themeProps={
                Object {
                  "onLugia": [Function],
                  "propsConfig": Object {},
                  "themeConfig": Object {},
                  "themeState": Object {
                    "disabled": false,
                  },
                }
              }
            >
              ¥
            </lugia_css_hoc_f>
          }
          readOnly={false}
          size="default"
          style={
            Object {
              "color": "#333333",
              "height": "3.2rem",
              "paddingBottom": "0rem",
              "paddingLeft": "3rem",
              "paddingRight": "3.5rem",
              "paddingTop": "0rem",
            }
          }
          value=""
        />
      </div>
    </span>
    <p>
      禁用状态 
    </p>
    <span
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        className="c2"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <span
          className="c3"
          style={Object {}}
        >
          <span
            className=""
            style={Object {}}
          >
            ¥
          </span>
        </span>
        <input
          autoFocus={false}
          className="c4"
          disabled={true}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          placeholder=""
          prefix={
            <lugia_css_hoc_f
              themeProps={
                Object {
                  "onLugia": [Function],
                  "propsConfig": Object {},
                  "themeConfig": Object {},
                  "themeState": Object {
                    "disabled": true,
                  },
                }
              }
            >
              ¥
            </lugia_css_hoc_f>
          }
          readOnly={false}
          size="default"
          style={
            Object {
              "backgroundColor": "#f2f2f2",
              "borderBottomColor": "#cccccc",
              "borderBottomStyle": "solid",
              "borderBottomWidth": "0.1rem",
              "borderLeftColor": "#cccccc",
              "borderLeftStyle": "solid",
              "borderLeftWidth": "0.1rem",
              "borderRightColor": "#cccccc",
              "borderRightStyle": "solid",
              "borderRightWidth": "0.1rem",
              "borderTopColor": "#cccccc",
              "borderTopStyle": "solid",
              "borderTopWidth": "0.1rem",
              "color": "#333333",
              "cursor": "not-allowed",
              "height": "3.2rem",
              "paddingBottom": "0rem",
              "paddingLeft": "3rem",
              "paddingRight": "3.5rem",
              "paddingTop": "0rem",
            }
          }
          value=""
        />
      </div>
    </span>
  </div>
  <div
    className="c0"
  >
    <p>
      small size
    </p>
    <span
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        className="c2"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <span
          className="c3"
          style={Object {}}
        >
          <span
            className=""
            style={Object {}}
          >
            ¥
          </span>
        </span>
        <input
          autoFocus={false}
          className="c4"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          placeholder="请填写金额"
          prefix={
            <lugia_css_hoc_f
              themeProps={
                Object {
                  "onLugia": [Function],
                  "propsConfig": Object {},
                  "themeConfig": Object {},
                  "themeState": Object {
                    "disabled": false,
                  },
                }
              }
            >
              ¥
            </lugia_css_hoc_f>
          }
          readOnly={false}
          size="small"
          style={
            Object {
              "color": "#333333",
              "height": "2.4rem",
              "paddingBottom": "0rem",
              "paddingLeft": "3rem",
              "paddingRight": "3.5rem",
              "paddingTop": "0rem",
            }
          }
          value=""
        />
      </div>
    </span>
    <p>
      default size
    </p>
    <span
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        className="c2"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <span
          className="c3"
          style={Object {}}
        >
          <span
            className=""
            style={Object {}}
          >
            ¥
          </span>
        </span>
        <input
          autoFocus={false}
          className="c4"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          placeholder="请填写金额"
          prefix={
            <lugia_css_hoc_f
              themeProps={
                Object {
                  "onLugia": [Function],
                  "propsConfig": Object {},
                  "themeConfig": Object {},
                  "themeState": Object {
                    "disabled": false,
                  },
                }
              }
            >
              ¥
            </lugia_css_hoc_f>
          }
          readOnly={false}
          size="default"
          style={
            Object {
              "color": "#333333",
              "height": "3.2rem",
              "paddingBottom": "0rem",
              "paddingLeft": "3rem",
              "paddingRight": "3.5rem",
              "paddingTop": "0rem",
            }
          }
          value=""
        />
      </div>
    </span>
    <p>
      large size
    </p>
    <span
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        className="c2"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <span
          className="c3"
          style={Object {}}
        >
          <span
            className=""
            style={Object {}}
          >
            ¥
          </span>
        </span>
        <input
          autoFocus={false}
          className="c4"
          disabled={true}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          placeholder=""
          prefix={
            <lugia_css_hoc_f
              themeProps={
                Object {
                  "onLugia": [Function],
                  "propsConfig": Object {},
                  "themeConfig": Object {},
                  "themeState": Object {
                    "disabled": true,
                  },
                }
              }
            >
              ¥
            </lugia_css_hoc_f>
          }
          readOnly={false}
          size="large"
          style={
            Object {
              "backgroundColor": "#f2f2f2",
              "borderBottomColor": "#cccccc",
              "borderBottomStyle": "solid",
              "borderBottomWidth": "0.1rem",
              "borderLeftColor": "#cccccc",
              "borderLeftStyle": "solid",
              "borderLeftWidth": "0.1rem",
              "borderRightColor": "#cccccc",
              "borderRightStyle": "solid",
              "borderRightWidth": "0.1rem",
              "borderTopColor": "#cccccc",
              "borderTopStyle": "solid",
              "borderTopWidth": "0.1rem",
              "color": "#333333",
              "cursor": "not-allowed",
              "height": "4rem",
              "paddingBottom": "0rem",
              "paddingLeft": "3rem",
              "paddingRight": "3.5rem",
              "paddingTop": "0rem",
            }
          }
          value=""
        />
      </div>
    </span>
  </div>
  <div
    className="c0"
  >
    <p>
      受限Input
    </p>
    <span
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        className="c2"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <span
          className="c3"
          style={Object {}}
        >
          <span
            className=""
            style={Object {}}
          >
            ¥
          </span>
        </span>
        <input
          autoFocus={false}
          className="c4"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          prefix={
            <lugia_css_hoc_f
              themeProps={
                Object {
                  "onLugia": [Function],
                  "propsConfig": Object {},
                  "themeConfig": Object {},
                  "themeState": Object {
                    "disabled": false,
                  },
                }
              }
            >
              ¥
            </lugia_css_hoc_f>
          }
          readOnly={false}
          size="default"
          style={
            Object {
              "color": "#333333",
              "height": "3.2rem",
              "paddingBottom": "0rem",
              "paddingLeft": "3rem",
              "paddingRight": "3.5rem",
              "paddingTop": "0rem",
            }
          }
          value=""
        />
      </div>
    </span>
    <p>
      有默认值的 受限Input
    </p>
    <span
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        className="c2"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <span
          className="c3"
          style={Object {}}
        >
          <span
            className=""
            style={Object {}}
          >
            ¥
          </span>
        </span>
        <input
          autoFocus={false}
          className="c4"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          prefix={
            <lugia_css_hoc_f
              themeProps={
                Object {
                  "onLugia": [Function],
                  "propsConfig": Object {},
                  "themeConfig": Object {},
                  "themeState": Object {
                    "disabled": false,
                  },
                }
              }
            >
              ¥
            </lugia_css_hoc_f>
          }
          readOnly={false}
          size="default"
          style={
            Object {
              "color": "#333333",
              "height": "3.2rem",
              "paddingBottom": "0rem",
              "paddingLeft": "3rem",
              "paddingRight": "3.5rem",
              "paddingTop": "0rem",
            }
          }
          value="123,456"
        />
        <i
          className="lugia-icon-reminder_close   c5"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "color": "#999999",
            }
          }
        />
      </div>
    </span>
  </div>
  <div
    className="c0"
  >
    <p>
      amountPrefix: '¥' transform: false 
    </p>
    <span
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        className="c2"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <span
          className="c3"
          style={Object {}}
        >
          <span
            className=""
            style={Object {}}
          >
            ¥
          </span>
        </span>
        <input
          autoFocus={false}
          className="c4"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          prefix={
            <lugia_css_hoc_f
              themeProps={
                Object {
                  "onLugia": [Function],
                  "propsConfig": Object {},
                  "themeConfig": Object {},
                  "themeState": Object {
                    "disabled": false,
                  },
                }
              }
            >
              ¥
            </lugia_css_hoc_f>
          }
          readOnly={false}
          size="default"
          style={
            Object {
              "color": "#333333",
              "height": "3.2rem",
              "paddingBottom": "0rem",
              "paddingLeft": "3rem",
              "paddingRight": "3.5rem",
              "paddingTop": "0rem",
            }
          }
          value=""
        />
      </div>
    </span>
    <p>
      amountPrefix: '$' transform: false 
    </p>
    <span
      className="c1"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        className="c2"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      >
        <span
          className="c3"
          style={Object {}}
        >
          <span
            className=""
            style={Object {}}
          >
            $
          </span>
        </span>
        <input
          autoFocus={false}
          className="c4"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          prefix={
            <lugia_css_hoc_f
              themeProps={
                Object {
                  "onLugia": [Function],
                  "propsConfig": Object {},
                  "themeConfig": Object {},
                  "themeState": Object {
                    "disabled": false,
                  },
                }
              }
            >
              $
            </lugia_css_hoc_f>
          }
          readOnly={false}
          size="default"
          style={
            Object {
              "color": "#333333",
              "height": "3.2rem",
              "paddingBottom": "0rem",
              "paddingLeft": "3rem",
              "paddingRight": "3.5rem",
              "paddingTop": "0rem",
            }
          }
          value=""
        />
      </div>
    </span>
  </div>
</div>
`;

exports[`AmountInputDemo props: placeholder  1`] = `
.c3 {
  line-height: 1.5;
  display: inline-block;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  outline: none;
  width: 20rem;
  height: 3.2rem;
  cursor: text;
  border-top-width: 0.1rem;
  border-top-style: solid;
  border-top-color: #cccccc;
  border-bottom-width: 0.1rem;
  border-bottom-style: solid;
  border-bottom-color: #cccccc;
  border-left-width: 0.1rem;
  border-left-style: solid;
  border-left-color: #cccccc;
  border-right-width: 0.1rem;
  border-right-style: solid;
  border-right-color: #cccccc;
  border-top-left-radius: 0.4rem;
  border-top-right-radius: 0.4rem;
  border-bottom-right-radius: 0.4rem;
  border-bottom-left-radius: 0.4rem;
}

.c3::-webkit-input-placeholder {
  color: #cccccc;
}

.c3::-moz-placeholder {
  color: #cccccc;
}

.c3:-ms-input-placeholder {
  color: #cccccc;
}

.c3::placeholder {
  color: #cccccc;
}

.c1 {
  position: relative;
  display: inline-block;
  outline: none;
}

.c2 {
  position: absolute;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  bottom: 50%;
  line-height: 1rem;
  font-size: 1.4em;
  color: rgba(0,0,0,0.65);
  left: 1rem;
}

.c0 {
  position: relative;
  display: inline-block;
}

<span
  className="c0"
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="c1"
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
  >
    <span
      className="c2"
      style={Object {}}
    >
      <span
        className=""
        style={Object {}}
      >
        ¥
      </span>
    </span>
    <input
      autoFocus={false}
      className="c3"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      placeholder="请填写内容"
      prefix={
        <lugia_css_hoc_f
          themeProps={
            Object {
              "onLugia": [Function],
              "propsConfig": Object {},
              "themeConfig": Object {},
              "themeState": Object {
                "disabled": false,
              },
            }
          }
        >
          ¥
        </lugia_css_hoc_f>
      }
      readOnly={false}
      size="default"
      style={
        Object {
          "color": "#333333",
          "height": "3.2rem",
          "paddingBottom": "0rem",
          "paddingLeft": "3rem",
          "paddingRight": "3.5rem",
          "paddingTop": "0rem",
        }
      }
      value=""
    />
  </div>
</span>
`;

exports[`AmountInputDemo props: placeholder  2`] = `
.c3 {
  line-height: 1.5;
  display: inline-block;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  outline: none;
  width: 20rem;
  height: 3.2rem;
  cursor: text;
  border-top-width: 0.1rem;
  border-top-style: solid;
  border-top-color: #cccccc;
  border-bottom-width: 0.1rem;
  border-bottom-style: solid;
  border-bottom-color: #cccccc;
  border-left-width: 0.1rem;
  border-left-style: solid;
  border-left-color: #cccccc;
  border-right-width: 0.1rem;
  border-right-style: solid;
  border-right-color: #cccccc;
  border-top-left-radius: 0.4rem;
  border-top-right-radius: 0.4rem;
  border-bottom-right-radius: 0.4rem;
  border-bottom-left-radius: 0.4rem;
}

.c3::-webkit-input-placeholder {
  color: #cccccc;
}

.c3::-moz-placeholder {
  color: #cccccc;
}

.c3:-ms-input-placeholder {
  color: #cccccc;
}

.c3::placeholder {
  color: #cccccc;
}

.c1 {
  position: relative;
  display: inline-block;
  outline: none;
}

.c2 {
  position: absolute;
  -webkit-transform: translateY(50%);
  -ms-transform: translateY(50%);
  transform: translateY(50%);
  bottom: 50%;
  line-height: 1rem;
  font-size: 1.4em;
  color: rgba(0,0,0,0.65);
  left: 1rem;
}

.c0 {
  position: relative;
  display: inline-block;
}

<span
  className="c0"
  onBlur={[Function]}
  onFocus={[Function]}
>
  <div
    className="c1"
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
  >
    <span
      className="c2"
      style={Object {}}
    >
      <span
        className=""
        style={Object {}}
      >
        ¥
      </span>
    </span>
    <input
      autoFocus={false}
      className="c3"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      placeholder=""
      prefix={
        <lugia_css_hoc_f
          themeProps={
            Object {
              "onLugia": [Function],
              "propsConfig": Object {},
              "themeConfig": Object {},
              "themeState": Object {
                "disabled": false,
              },
            }
          }
        >
          ¥
        </lugia_css_hoc_f>
      }
      readOnly={false}
      size="default"
      style={
        Object {
          "color": "#333333",
          "height": "3.2rem",
          "paddingBottom": "0rem",
          "paddingLeft": "3rem",
          "paddingRight": "3.5rem",
          "paddingTop": "0rem",
        }
      }
      value=""
    />
  </div>
</span>
`;
